parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    SEMICOLON
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER declarations proclist cmp_stmt
Rule 2     declarations -> <empty>
Rule 3     declarations -> VAR declist
Rule 4     declist -> idlist COLON type
Rule 5     declist -> declist COLON idlist COLON type
Rule 6     idlist -> IDENTIFIER
Rule 7     idlist -> idlist COMMA IDENTIFIER
Rule 8     type -> INT_KW
Rule 9     type -> FLOAT_KW
Rule 10    proclist -> <empty>
Rule 11    proclist -> proclist proc
Rule 12    proc -> PROCEDURE IDENTIFIER parameters COLON declarations cmp_stmt
Rule 13    parameters -> <empty>
Rule 14    parameters -> LRB declist RRB
Rule 15    cmp_stmt -> BEGIN stmtlist END
Rule 16    stmtlist -> stmt
Rule 17    stmtlist -> stmtlist COLON stmt
Rule 18    stmt -> IDENTIFIER ASSIGN exp
Rule 19    stmt -> IF exp THEN stmt ELSE stmt
Rule 20    stmt -> IF exp THEN stmt
Rule 21    stmt -> WHILE exp DO stmt
Rule 22    stmt -> cmp_stmt
Rule 23    stmt -> IDENTIFIER args
Rule 24    stmt -> <empty>
Rule 25    args -> <empty>
Rule 26    args -> LRB act_paramlist RRB
Rule 27    act_paramlist -> act_paramlist COMMA act_param
Rule 28    act_paramlist -> act_param
Rule 29    act_param -> exp
Rule 30    exp -> INTEGER
Rule 31    exp -> FLOAT
Rule 32    exp -> IDENTIFIER
Rule 33    exp -> exp SUM exp
Rule 34    exp -> exp SUB exp
Rule 35    exp -> exp MUL exp
Rule 36    exp -> exp DIV exp
Rule 37    exp -> SUB exp
Rule 38    exp -> exp MOD exp
Rule 39    exp -> exp LT exp
Rule 40    exp -> exp LTE exp
Rule 41    exp -> exp EQUAL exp
Rule 42    exp -> exp NOTEQ exp
Rule 43    exp -> exp GT exp
Rule 44    exp -> exp GTE exp
Rule 45    exp -> exp AND exp
Rule 46    exp -> exp OR exp
Rule 47    exp -> NOT exp
Rule 48    exp -> LRB exp RRB

Terminals, with rules where they appear

AND                  : 45
ASSIGN               : 18
BEGIN                : 15
COLON                : 4 5 5 12 17
COMMA                : 7 27
DIV                  : 36
DO                   : 21
ELSE                 : 19
END                  : 15
EQUAL                : 41
FALSE                : 
FLOAT                : 31
FLOAT_KW             : 9
GT                   : 43
GTE                  : 44
IDENTIFIER           : 1 6 7 12 18 23 32
IF                   : 19 20
INTEGER              : 30
INT_KW               : 8
LRB                  : 14 26 48
LT                   : 39
LTE                  : 40
MOD                  : 38
MUL                  : 35
NOT                  : 47
NOTEQ                : 42
OR                   : 46
PROCEDURE            : 12
PROGRAM              : 1
RRB                  : 14 26 48
SEMICOLON            : 
SUB                  : 34 37
SUM                  : 33
THEN                 : 19 20
TRUE                 : 
VAR                  : 3
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

act_param            : 27 28
act_paramlist        : 26 27
args                 : 23
cmp_stmt             : 1 12 22
declarations         : 1 12
declist              : 3 5 14
exp                  : 18 19 20 21 29 33 33 34 34 35 35 36 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48
idlist               : 4 5 7
parameters           : 12
proc                 : 11
proclist             : 1 11
program              : 0
stmt                 : 16 17 19 19 20 21
stmtlist             : 15 17
type                 : 4 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER declarations proclist cmp_stmt

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER declarations proclist cmp_stmt

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . declarations proclist cmp_stmt
    (2) declarations -> .
    (3) declarations -> . VAR declist

    BEGIN           reduce using rule 2 (declarations -> .)
    PROCEDURE       reduce using rule 2 (declarations -> .)
    VAR             shift and go to state 5

    declarations                   shift and go to state 4

state 4

    (1) program -> PROGRAM IDENTIFIER declarations . proclist cmp_stmt
    (10) proclist -> .
    (11) proclist -> . proclist proc

    BEGIN           reduce using rule 10 (proclist -> .)
    PROCEDURE       reduce using rule 10 (proclist -> .)

    proclist                       shift and go to state 6

state 5

    (3) declarations -> VAR . declist
    (4) declist -> . idlist COLON type
    (5) declist -> . declist COLON idlist COLON type
    (6) idlist -> . IDENTIFIER
    (7) idlist -> . idlist COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 9

    declist                        shift and go to state 7
    idlist                         shift and go to state 8

state 6

    (1) program -> PROGRAM IDENTIFIER declarations proclist . cmp_stmt
    (11) proclist -> proclist . proc
    (15) cmp_stmt -> . BEGIN stmtlist END
    (12) proc -> . PROCEDURE IDENTIFIER parameters COLON declarations cmp_stmt

    BEGIN           shift and go to state 12
    PROCEDURE       shift and go to state 13

    cmp_stmt                       shift and go to state 10
    proc                           shift and go to state 11

state 7

    (3) declarations -> VAR declist .
    (5) declist -> declist . COLON idlist COLON type

    BEGIN           reduce using rule 3 (declarations -> VAR declist .)
    PROCEDURE       reduce using rule 3 (declarations -> VAR declist .)
    COLON           shift and go to state 14


state 8

    (4) declist -> idlist . COLON type
    (7) idlist -> idlist . COMMA IDENTIFIER

    COLON           shift and go to state 15
    COMMA           shift and go to state 16


state 9

    (6) idlist -> IDENTIFIER .

    COLON           reduce using rule 6 (idlist -> IDENTIFIER .)
    COMMA           reduce using rule 6 (idlist -> IDENTIFIER .)


state 10

    (1) program -> PROGRAM IDENTIFIER declarations proclist cmp_stmt .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER declarations proclist cmp_stmt .)


state 11

    (11) proclist -> proclist proc .

    BEGIN           reduce using rule 11 (proclist -> proclist proc .)
    PROCEDURE       reduce using rule 11 (proclist -> proclist proc .)


state 12

    (15) cmp_stmt -> BEGIN . stmtlist END
    (16) stmtlist -> . stmt
    (17) stmtlist -> . stmtlist COLON stmt
    (18) stmt -> . IDENTIFIER ASSIGN exp
    (19) stmt -> . IF exp THEN stmt ELSE stmt
    (20) stmt -> . IF exp THEN stmt
    (21) stmt -> . WHILE exp DO stmt
    (22) stmt -> . cmp_stmt
    (23) stmt -> . IDENTIFIER args
    (24) stmt -> .
    (15) cmp_stmt -> . BEGIN stmtlist END

    IDENTIFIER      shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    END             reduce using rule 24 (stmt -> .)
    COLON           reduce using rule 24 (stmt -> .)
    BEGIN           shift and go to state 12

    stmtlist                       shift and go to state 17
    stmt                           shift and go to state 18
    cmp_stmt                       shift and go to state 22

state 13

    (12) proc -> PROCEDURE . IDENTIFIER parameters COLON declarations cmp_stmt

    IDENTIFIER      shift and go to state 23


state 14

    (5) declist -> declist COLON . idlist COLON type
    (6) idlist -> . IDENTIFIER
    (7) idlist -> . idlist COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 9

    idlist                         shift and go to state 24

state 15

    (4) declist -> idlist COLON . type
    (8) type -> . INT_KW
    (9) type -> . FLOAT_KW

    INT_KW          shift and go to state 26
    FLOAT_KW        shift and go to state 27

    type                           shift and go to state 25

state 16

    (7) idlist -> idlist COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 28


state 17

    (15) cmp_stmt -> BEGIN stmtlist . END
    (17) stmtlist -> stmtlist . COLON stmt

    END             shift and go to state 29
    COLON           shift and go to state 30


state 18

    (16) stmtlist -> stmt .

    END             reduce using rule 16 (stmtlist -> stmt .)
    COLON           reduce using rule 16 (stmtlist -> stmt .)


state 19

    (18) stmt -> IDENTIFIER . ASSIGN exp
    (23) stmt -> IDENTIFIER . args
    (25) args -> .
    (26) args -> . LRB act_paramlist RRB

    ASSIGN          shift and go to state 31
    END             reduce using rule 25 (args -> .)
    COLON           reduce using rule 25 (args -> .)
    ELSE            reduce using rule 25 (args -> .)
    LRB             shift and go to state 33

    args                           shift and go to state 32

state 20

    (19) stmt -> IF . exp THEN stmt ELSE stmt
    (20) stmt -> IF . exp THEN stmt
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    exp                            shift and go to state 34

state 21

    (21) stmt -> WHILE . exp DO stmt
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    exp                            shift and go to state 41

state 22

    (22) stmt -> cmp_stmt .

    END             reduce using rule 22 (stmt -> cmp_stmt .)
    COLON           reduce using rule 22 (stmt -> cmp_stmt .)
    ELSE            reduce using rule 22 (stmt -> cmp_stmt .)


state 23

    (12) proc -> PROCEDURE IDENTIFIER . parameters COLON declarations cmp_stmt
    (13) parameters -> .
    (14) parameters -> . LRB declist RRB

    COLON           reduce using rule 13 (parameters -> .)
    LRB             shift and go to state 43

    parameters                     shift and go to state 42

state 24

    (5) declist -> declist COLON idlist . COLON type
    (7) idlist -> idlist . COMMA IDENTIFIER

    COLON           shift and go to state 44
    COMMA           shift and go to state 16


state 25

    (4) declist -> idlist COLON type .

    COLON           reduce using rule 4 (declist -> idlist COLON type .)
    BEGIN           reduce using rule 4 (declist -> idlist COLON type .)
    PROCEDURE       reduce using rule 4 (declist -> idlist COLON type .)
    RRB             reduce using rule 4 (declist -> idlist COLON type .)


state 26

    (8) type -> INT_KW .

    COLON           reduce using rule 8 (type -> INT_KW .)
    BEGIN           reduce using rule 8 (type -> INT_KW .)
    PROCEDURE       reduce using rule 8 (type -> INT_KW .)
    RRB             reduce using rule 8 (type -> INT_KW .)


state 27

    (9) type -> FLOAT_KW .

    COLON           reduce using rule 9 (type -> FLOAT_KW .)
    BEGIN           reduce using rule 9 (type -> FLOAT_KW .)
    PROCEDURE       reduce using rule 9 (type -> FLOAT_KW .)
    RRB             reduce using rule 9 (type -> FLOAT_KW .)


state 28

    (7) idlist -> idlist COMMA IDENTIFIER .

    COLON           reduce using rule 7 (idlist -> idlist COMMA IDENTIFIER .)
    COMMA           reduce using rule 7 (idlist -> idlist COMMA IDENTIFIER .)


state 29

    (15) cmp_stmt -> BEGIN stmtlist END .

    $end            reduce using rule 15 (cmp_stmt -> BEGIN stmtlist END .)
    END             reduce using rule 15 (cmp_stmt -> BEGIN stmtlist END .)
    COLON           reduce using rule 15 (cmp_stmt -> BEGIN stmtlist END .)
    ELSE            reduce using rule 15 (cmp_stmt -> BEGIN stmtlist END .)
    BEGIN           reduce using rule 15 (cmp_stmt -> BEGIN stmtlist END .)
    PROCEDURE       reduce using rule 15 (cmp_stmt -> BEGIN stmtlist END .)


state 30

    (17) stmtlist -> stmtlist COLON . stmt
    (18) stmt -> . IDENTIFIER ASSIGN exp
    (19) stmt -> . IF exp THEN stmt ELSE stmt
    (20) stmt -> . IF exp THEN stmt
    (21) stmt -> . WHILE exp DO stmt
    (22) stmt -> . cmp_stmt
    (23) stmt -> . IDENTIFIER args
    (24) stmt -> .
    (15) cmp_stmt -> . BEGIN stmtlist END

    IDENTIFIER      shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    END             reduce using rule 24 (stmt -> .)
    COLON           reduce using rule 24 (stmt -> .)
    BEGIN           shift and go to state 12

    stmt                           shift and go to state 45
    cmp_stmt                       shift and go to state 22

state 31

    (18) stmt -> IDENTIFIER ASSIGN . exp
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    exp                            shift and go to state 46

state 32

    (23) stmt -> IDENTIFIER args .

    END             reduce using rule 23 (stmt -> IDENTIFIER args .)
    COLON           reduce using rule 23 (stmt -> IDENTIFIER args .)
    ELSE            reduce using rule 23 (stmt -> IDENTIFIER args .)


state 33

    (26) args -> LRB . act_paramlist RRB
    (27) act_paramlist -> . act_paramlist COMMA act_param
    (28) act_paramlist -> . act_param
    (29) act_param -> . exp
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    act_paramlist                  shift and go to state 47
    act_param                      shift and go to state 48
    exp                            shift and go to state 49

state 34

    (19) stmt -> IF exp . THEN stmt ELSE stmt
    (20) stmt -> IF exp . THEN stmt
    (33) exp -> exp . SUM exp
    (34) exp -> exp . SUB exp
    (35) exp -> exp . MUL exp
    (36) exp -> exp . DIV exp
    (38) exp -> exp . MOD exp
    (39) exp -> exp . LT exp
    (40) exp -> exp . LTE exp
    (41) exp -> exp . EQUAL exp
    (42) exp -> exp . NOTEQ exp
    (43) exp -> exp . GT exp
    (44) exp -> exp . GTE exp
    (45) exp -> exp . AND exp
    (46) exp -> exp . OR exp

    THEN            shift and go to state 50
    SUM             shift and go to state 51
    SUB             shift and go to state 52
    MUL             shift and go to state 53
    DIV             shift and go to state 54
    MOD             shift and go to state 55
    LT              shift and go to state 56
    LTE             shift and go to state 57
    EQUAL           shift and go to state 58
    NOTEQ           shift and go to state 59
    GT              shift and go to state 60
    GTE             shift and go to state 61
    AND             shift and go to state 62
    OR              shift and go to state 63


state 35

    (30) exp -> INTEGER .

    THEN            reduce using rule 30 (exp -> INTEGER .)
    SUM             reduce using rule 30 (exp -> INTEGER .)
    SUB             reduce using rule 30 (exp -> INTEGER .)
    MUL             reduce using rule 30 (exp -> INTEGER .)
    DIV             reduce using rule 30 (exp -> INTEGER .)
    MOD             reduce using rule 30 (exp -> INTEGER .)
    LT              reduce using rule 30 (exp -> INTEGER .)
    LTE             reduce using rule 30 (exp -> INTEGER .)
    EQUAL           reduce using rule 30 (exp -> INTEGER .)
    NOTEQ           reduce using rule 30 (exp -> INTEGER .)
    GT              reduce using rule 30 (exp -> INTEGER .)
    GTE             reduce using rule 30 (exp -> INTEGER .)
    AND             reduce using rule 30 (exp -> INTEGER .)
    OR              reduce using rule 30 (exp -> INTEGER .)
    DO              reduce using rule 30 (exp -> INTEGER .)
    END             reduce using rule 30 (exp -> INTEGER .)
    COLON           reduce using rule 30 (exp -> INTEGER .)
    ELSE            reduce using rule 30 (exp -> INTEGER .)
    RRB             reduce using rule 30 (exp -> INTEGER .)
    COMMA           reduce using rule 30 (exp -> INTEGER .)


state 36

    (31) exp -> FLOAT .

    THEN            reduce using rule 31 (exp -> FLOAT .)
    SUM             reduce using rule 31 (exp -> FLOAT .)
    SUB             reduce using rule 31 (exp -> FLOAT .)
    MUL             reduce using rule 31 (exp -> FLOAT .)
    DIV             reduce using rule 31 (exp -> FLOAT .)
    MOD             reduce using rule 31 (exp -> FLOAT .)
    LT              reduce using rule 31 (exp -> FLOAT .)
    LTE             reduce using rule 31 (exp -> FLOAT .)
    EQUAL           reduce using rule 31 (exp -> FLOAT .)
    NOTEQ           reduce using rule 31 (exp -> FLOAT .)
    GT              reduce using rule 31 (exp -> FLOAT .)
    GTE             reduce using rule 31 (exp -> FLOAT .)
    AND             reduce using rule 31 (exp -> FLOAT .)
    OR              reduce using rule 31 (exp -> FLOAT .)
    DO              reduce using rule 31 (exp -> FLOAT .)
    END             reduce using rule 31 (exp -> FLOAT .)
    COLON           reduce using rule 31 (exp -> FLOAT .)
    ELSE            reduce using rule 31 (exp -> FLOAT .)
    RRB             reduce using rule 31 (exp -> FLOAT .)
    COMMA           reduce using rule 31 (exp -> FLOAT .)


state 37

    (32) exp -> IDENTIFIER .

    THEN            reduce using rule 32 (exp -> IDENTIFIER .)
    SUM             reduce using rule 32 (exp -> IDENTIFIER .)
    SUB             reduce using rule 32 (exp -> IDENTIFIER .)
    MUL             reduce using rule 32 (exp -> IDENTIFIER .)
    DIV             reduce using rule 32 (exp -> IDENTIFIER .)
    MOD             reduce using rule 32 (exp -> IDENTIFIER .)
    LT              reduce using rule 32 (exp -> IDENTIFIER .)
    LTE             reduce using rule 32 (exp -> IDENTIFIER .)
    EQUAL           reduce using rule 32 (exp -> IDENTIFIER .)
    NOTEQ           reduce using rule 32 (exp -> IDENTIFIER .)
    GT              reduce using rule 32 (exp -> IDENTIFIER .)
    GTE             reduce using rule 32 (exp -> IDENTIFIER .)
    AND             reduce using rule 32 (exp -> IDENTIFIER .)
    OR              reduce using rule 32 (exp -> IDENTIFIER .)
    DO              reduce using rule 32 (exp -> IDENTIFIER .)
    END             reduce using rule 32 (exp -> IDENTIFIER .)
    COLON           reduce using rule 32 (exp -> IDENTIFIER .)
    ELSE            reduce using rule 32 (exp -> IDENTIFIER .)
    RRB             reduce using rule 32 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 32 (exp -> IDENTIFIER .)


state 38

    (37) exp -> SUB . exp
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    exp                            shift and go to state 64

state 39

    (47) exp -> NOT . exp
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    exp                            shift and go to state 65

state 40

    (48) exp -> LRB . exp RRB
    (30) exp -> . INTEGER
    (31) exp -> . FLOAT
    (32) exp -> . IDENTIFIER
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . SUB exp
    (38) exp -> . exp MOD exp
    (39) exp -> . exp LT exp
    (40) exp -> . exp LTE exp
    (41) exp -> . exp EQUAL exp
    (42) exp -> . exp NOTEQ exp
    (43) exp -> . exp GT exp
    (44) exp -> . exp GTE exp
    (45) exp -> . exp AND exp
    (46) exp -> . exp OR exp
    (47) exp -> . NOT exp
    (48) exp -> . LRB exp RRB

    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    IDENTIFIER      shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    LRB             shift and go to state 40

    exp                            shift and go to state 66

state 41

    (21) stmt -> WHILE exp . DO stmt
    (33) exp -> exp . SUM exp
    (34) exp -> exp . SUB exp
    (35) exp -> exp . MUL exp
    (36) exp -> exp . DIV exp
    (38) exp -> exp . MOD exp
    (39) exp -> exp . LT exp
    (40) exp -> exp . LTE exp
    (41) exp -> exp . EQUAL exp
    (42) exp -> exp . NOTEQ exp
    (43) exp -> exp . GT exp
    (44) exp -> exp . GTE exp
    (45) exp -> exp . AND exp
    (46) exp -> exp . OR exp

    DO              shift and go to state 67
    SUM             shift and go to state 51
    SUB             shift and go to state 52
    MUL             shift and go to state 53
    DIV             shift and go to state 54
    MOD             shift and go to state 55
    LT              shift and go to state 56
    LTE             shift and go to state 57
    EQUAL           shift and go to state 58
    NOTEQ           shift and go to state 59
    GT              shift and go to state 60
    GTE             shift and go to state 61
    AND             shift and go to state 62
    OR              shift and go to state 63


state 42

    (12) proc -> PROCEDURE IDENTIFIER parameters . COLON declarations cmp_stmt

    COLON           shift and go to state 68


state 43

    (14) parameters -> LRB . declist RRB
    (4) declist -> . idlist COLON type
    (5) declist -> . declist COLON idlist COLON type
    (6) idlist -> . IDENTIFIER
    (7) idlist -> . idlist COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 9

    declist                        shift and go to state 69
    idlist                         shift and go to state 8

state 44

    (5) declist -> declist COLON idlist COLON . type
    (8) type -> . INT_KW
    (9) type -> . FLOAT_KW

    INT_KW          shift and go to state 26
    FLOAT_KW        shift and go to state 27

    type                           shift and go to state 70

state 45

    (17) stmtlist -> stmtlist COLON stmt .

    END             reduce using rule 17 (stmtlist -> stmtlist COLON stmt .)
    COLON           reduce using rule 17 (stmtlist -> stmtlist COLON stmt .)


state 46

    (18) stmt -> IDENTIFIER ASSIGN exp .
    (33) exp -> exp . SUM exp
    (34) exp -> exp . SUB exp
    (35) exp -> exp . MUL exp
    (36) exp -> exp . DIV exp
    (38) exp -> exp . MOD exp
    (39) exp -> exp . LT exp
    (40) exp -> exp . LTE exp
    (41) exp -> exp . EQUAL exp
    (42) exp -> exp . NOTEQ exp
    (43) exp -> exp . GT exp
    (44) exp -> exp . GTE exp
    (45) exp -> exp . AND exp
    (46) exp -> exp . OR exp

    END             reduce using rule 18 (stmt -> IDENTIFIER ASSIGN exp .)
    COLON           reduce using rule 18 (stmt -> IDENTIFIER ASSIGN exp .)
    ELSE            reduce using rule 18 (stmt -> IDENTIFIER ASSIGN exp .)
    SUM             shift and go to state 51
    SUB             shift and go to state 52
    MUL             shift and go to state 53
    DIV             shift and go to state 54
    MOD             shift and go to state 55
    LT              shift and go to state 56
    LTE             shift and go to state 57
    EQUAL           shift and go to state 58
    NOTEQ           shift and go to state 59
    GT              shift and go to state 60
    GTE             shift and go to state 61
    AND             shift and go to state 62
    OR              shift and go to state 63


state 47
